gccida/c3/remove_edge
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/remove_edge/src/cfg.c:860:12: error: expected expression
*( _OWORD *)&e->flags = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/remove_edge/src/cfg.c:860:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&e->flags = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/remove_edge/src/cfg.c:861:12: error: expected expression
*( _OWORD *)&e->insns = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/remove_edge/src/cfg.c:861:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&e->insns = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/remove_edge/src/cfg.c:862:12: error: expected expression
*( _OWORD *)&e->src = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/remove_edge/src/cfg.c:862:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&e->src = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/remove_edge/src/cfg.c:863:12: error: expected expression
*( _OWORD *)&e->pred_next = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/remove_edge/src/cfg.c:863:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&e->pred_next = 0LL; 
   ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/remove_edge/src/obj/cfg.o] Error 1
